tests/purs/failing/DeclConflictTypeClass.purs
-- @shouldFailWith DeclConflict
module Main where

class Fail

data Fail
