tests/purs/failing/DeclConflictTypeClass.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DeclConflictTypeClass.purs:6:1 - 6:10 (line 6, column 1 - line 6, column 10)

  Declaration for type [33mFail[0m conflicts with an existing type class of the same name.


See https://github.com/purescript/documentation/blob/master/errors/DeclConflict.md for more information,
or to contribute content related to this error.

